syntax = "proto3";

import "google/protobuf/empty.proto";

package solver;

option go_package = "solver.v1";

service Solver {
  rpc MakeDecision(EventRequest) returns (google.protobuf.Empty) {};
}

enum EventType {
  EVENT_TYPE_BUY = 0;
  EVENT_TYPE_SELL = 1;
}

message EventRequest {
  string ticker = 1;
  float price = 2;
  EventType event_type = 3;
}